<resources>
    <string name="app_name"><b>Almost There!</b></string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Where are you going?</string>
    <string name="explanation">I\'ll notify you when you\'re almost at your stop.</string>
    <string name="setreminderbutton">Set Reminder</string>
    <string name="no_location_detected">No location detected</string>
    <string name="for_oc"><u>for OCTranspoⒸ</u></string>
    <string name="banner_ad_unit_id">ca-app-pub-3472357498358803/1362538177</string>
</resources>

<!--ca-app-pub-3940256099942544/6300978111 ca-app-pub-3472357498358803/1362538177-->
