<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center|top"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="io.github.tcunn093.almostthere.MainActivity"
    android:id="@+id/Main"
    android:weightSum="1">

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="145dp"
    android:layout_above="@+id/textView"
    android:background="@drawable/back"
    android:orientation="horizontal">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical|center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:textSize="65sp"
        android:textAlignment="center"
        android:textColor="@color/redblack_Red"
        android:id="@+id/titletext"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/for_oc"
        android:textSize="12dp"
        android:id="@+id/for_OC"
        android:textStyle="italic"
        android:textColor="@color/redblack_Red"
        android:paddingBottom="5dp"
        android:paddingTop="10dp"
        android:paddingStart="4dp"
        android:paddingLeft="4dp"

        android:layout_gravity="bottom"
        android:gravity="center_vertical|center_horizontal"
        android:backgroundTint="#8e6868"
        android:autoText="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>



    <TextView
        android:gravity="center"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/explanation"
        android:id="@+id/textView"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop= "10dp"
        android:paddingBottom= "10dp"
        android:layout_above="@+id/search_box"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="37dp" />

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:padding="5dp"
        android:hint="@string/search_hint"
        android:id="@+id/search_box"
        android:textSize="18sp"
        android:typeface="sans"
        android:inputType="textNoSuggestions"
        android:textAlignment="center"
        android:background="@color/white"
        android:textColor="#f9f9f9"
        android:dropDownHeight="140dp"
        android:popupBackground= "@color/redblack_Red"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />



    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"

        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setreminderbutton"
            android:id="@+id/setReminderButton"
            android:textSize="30sp"
            android:onClick="onClick"
            android:layout_marginBottom="73dp"
            android:layout_above="@+id/adView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


</RelativeLayout>
